--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h2 class="text-sky-400 font-semibold text-lg mb-4">Maayan Shalom</h2>
             <p class="text-gray-300 leading-relaxed text-sm">
                 מהנדסת, מתמחה בשיפור תהליכים, דאטה ו-AI <br />
-                הרצאות והדרכות על AI
+                הרצאות והדרכות על בינה מלאכותית
             </p>
         </div>
 
@@ -159,4 +159,5 @@
     </div>
 
 </body>
+
 </html>
