--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>מעיין שלום | SMART AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <meta name="description" content="כלים, מדריכים והרצאות בבינה מלאכותית">
+
+<meta property="og:title" content="SMART AI | מעיין שלום">
+<meta property="og:description" content="כלים, מדריכים והרצאות בבינה מלאכותית">
+<meta property="og:image" content="https://maayan012.github.io/AI/preview.jpg">
+<meta property="og:url" content="https://maayan012.github.io/AI/">
+
     <style>
         body {
             font-family: 'Assistant', sans-serif;
@@ -161,3 +169,4 @@
 </body>
 
 </html>
+
