--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    <meta name="description" content="כלים, מדריכים והרצאות בבינה מלאכותית">
+    <meta name="description" content="כלים, הדרכות והרצאות בבינה מלאכותית">
 
 <meta property="og:title" content="SMART AI | מעיין שלום">
-<meta property="og:description" content="כלים, מדריכים והרצאות בבינה מלאכותית">
+<meta property="og:description" content="כלים, הדרכות והרצאות בבינה מלאכותית">
 <meta property="og:image" content="https://maayan012.github.io/AI/preview.jpg">
 <meta property="og:url" content="https://maayan012.github.io/AI/">
 
@@ -169,4 +169,5 @@
 </body>
 
 </html>
+
 
