--- a/index.html
+++ b/index.html
@@ -142,3 +142,124 @@
                 <div class="profile-wrap">
                     <img
                         src="https://github.com/maayan012/Maayan-picture/blob/main/Gemini_Generated_Image_ddfux6ddfux6ddfu.png?raw=true"
+                        alt="מעיין שלום"
+                        class="profile-img"
+                        onerror="this.src='https://ui-avatars.com/api/?name=Maayan+Shalom&background=0ea5e9&color=fff&size=256'"
+                    >
+                </div>
+            </div>
+
+            <h1 class="text-3xl font-bold tracking-tight">מעיין שלום</h1>
+            <p class="text-sky-300 font-semibold text-base mt-1">Maayan Shalom</p>
+
+            <div class="mt-4 flex justify-center">
+                <div class="pill px-4 py-2 text-sm text-slate-200/90 leading-relaxed">
+                    מהנדסת תעשייה וניהול, דאטה ותהליכים, הרצאות והדרכות AI
+                </div>
+            </div>
+        </header>
+
+        <div class="soft-divider mb-6"></div>
+
+        <section class="mb-7">
+            <div class="flex justify-center gap-5">
+                <a href="https://wa.me/972543675502" target="_blank" rel="noopener" class="social-icon text-gray-300/80" aria-label="WhatsApp">
+                    <svg class="w-7 h-7" viewBox="0 0 32 32"><path d="M16 0C7.163 0 0 7.163 0 16c0 2.837.742 5.502 2.038 7.821L0 32l8.426-2.012A15.9 15.9 0 0 0 16 32c8.837 0 16-7.163 16-16S24.837 0 16 0zm0 29.09a13.02 13.02 0 0 1-6.64-1.82l-.474-.28-4.996 1.193 1.335-4.873-.309-.5A13.03 13.03 0 1 1 16 29.09zm7.538-9.644c-.412-.206-2.437-1.203-2.815-1.342-.378-.137-.653-.206-.928.206-.275.413-1.065 1.342-1.305 1.618-.24.275-.481.309-.893.103-.412-.206-1.739-.64-3.31-2.04-1.222-1.09-2.047-2.437-2.286-2.849-.24-.413-.025-.636.181-.842.185-.184.412-.481.618-.721.206-.24.275-.413.412-.688.137-.275.069-.515-.034-.721-.103-.206-.928-2.232-1.27-3.058-.333-.8-.672-.69-.928-.703-.24-.012-.515-.015-.79-.015s-.721.103-1.1.515c-.378.413-1.444 1.412-1.444 3.446 0 2.034 1.48 4.001 1.687 4.277.206.275 2.916 4.453 7.07 6.247.988.426 1.76.681 2.36.872.991.315 1.893.27 2.605.164.795-.118 2.437-.996 2.783-1.96.344-.964.344-1.79.24-1.96-.103-.172-.378-.275-.79-.481z"/></svg>
+                </a>
+
+                <a href="mailto:smartai.maayan@gmail.com" class="social-icon text-gray-300/80" aria-label="Email">
+                    <svg class="w-7 h-7" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
+                </a>
+
+                <a href="https://www.linkedin.com/in/maayan-shalom012" target="_blank" rel="noopener" class="social-icon text-gray-300/80" aria-label="LinkedIn">
+                    <svg class="w-7 h-7" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                </a>
+
+                <a href="https://www.instagram.com/maayan.shalom.ai" target="_blank" rel="noopener" class="social-icon text-gray-300/80" aria-label="Instagram">
+                    <svg class="w-7 h-7" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
+                </a>
+
+                <a href="https://www.facebook.com/profile.php?id=61576235122754" target="_blank" rel="noopener" class="social-icon text-gray-300/80" aria-label="Facebook">
+                    <svg class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg>
+                </a>
+            </div>
+
+            <p class="text-center text-xs text-slate-300/70 mt-4">
+                לחיצה אחת וממשיכים ישירות
+            </p>
+        </section>
+
+        <section class="mb-8">
+            <h3 class="section-title text-xl font-bold">קורסים והרצאות</h3>
+
+            <div class="grid grid-cols-1 gap-3">
+                <a class="card-link" href="https://wa.me/972543675502?text=%D7%94%D7%99%D7%99%20%D7%9E%D7%A2%D7%99%D7%99%D7%9F%2C%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%A9%D7%9E%D7%95%D7%A2%20%D7%A2%D7%9C%20%D7%94%D7%A8%D7%A6%D7%90%D7%95%D7%AA%20%D7%94%D7%A9%D7%A8%D7%90%D7%94" target="_blank" rel="noopener">
+                    <span class="w-8 text-center text-sky-300 text-lg">✨</span>
+                    <span class="font-semibold text-slate-100">הרצאות השראה</span>
+                    <span class="mr-auto badge">פופולרי</span>
+                </a>
+
+                <a class="card-link" href="https://wa.me/972543675502?text=%D7%94%D7%99%D7%99%20%D7%9E%D7%A2%D7%99%D7%99%D7%9F%2C%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%AA%D7%90%D7%9D%20%D7%A1%D7%93%D7%A0%D7%94%20%D7%9C%D7%90%D7%A8%D7%92%D7%95%D7%9F" target="_blank" rel="noopener">
+                    <span class="w-8 text-center text-sky-300 text-lg">🏢</span>
+                    <span class="font-semibold text-slate-100">סדנאות והרצאות לארגונים</span>
+                    <span class="mr-auto badge">לידיים</span>
+                </a>
+
+                <a class="card-link" href="https://wa.me/972543675502?text=%D7%94%D7%99%D7%99%20%D7%9E%D7%A2%D7%99%D7%99%D7%9F%2C%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%AA%D7%90%D7%9D%20%D7%A1%D7%93%D7%A0%D7%94%20%D7%9C%D7%90%D7%A0%D7%A9%D7%99%20%D7%97%D7%99%D7%A0%D7%95%D7%9A" target="_blank" rel="noopener">
+                    <span class="w-8 text-center text-sky-300 text-lg">🎓</span>
+                    <span class="font-semibold text-slate-100">סדנאות והרצאות לאנשי חינוך</span>
+                    <span class="mr-auto badge">מוכוון בית ספר</span>
+                </a>
+
+                <a class="card-link" href="https://wa.me/972543675502?text=%D7%94%D7%99%D7%99%20%D7%9E%D7%A2%D7%99%D7%99%D7%9F%2C%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%A4%D7%A8%D7%98%D7%99%D7%9D%20%D7%A2%D7%9C%20%D7%A7%D7%95%D7%A8%D7%A1%20AI%20MASTERY" target="_blank" rel="noopener">
+                    <span class="w-8 text-center text-sky-300 text-lg">🚀</span>
+                    <span class="font-semibold text-slate-100">קורס AI MASTERY</span>
+                    <span class="mr-auto badge">קבוצות קטנות</span>
+                </a>
+
+                <a class="card-link" href="https://wa.me/972543675502?text=%D7%94%D7%99%D7%99%20%D7%9E%D7%A2%D7%99%D7%99%D7%9F%2C%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%A9%D7%9E%D7%95%D7%A2%20%D7%A2%D7%9C%20%D7%9E%D7%A2%D7%91%D7%93%D7%95%D7%AA%20%D7%93%D7%9E%D7%99%D7%95%D7%9F" target="_blank" rel="noopener">
+                    <span class="w-8 text-center text-sky-300 text-lg">🧪</span>
+                    <span class="font-semibold text-slate-100">מעבדות דמיון</span>
+                    <span class="mr-auto badge">פיילוטים</span>
+                </a>
+            </div>
+        </section>
+
+        <section class="mb-8">
+            <h3 class="section-title text-xl font-bold">קצת עלי</h3>
+
+            <div class="space-y-3 text-sm text-slate-200/85 leading-relaxed">
+                <div class="flex gap-3">
+                    <span class="text-sky-300 font-bold">•</span>
+                    <span>מהנדסת תעשייה וניהול, טכניון, מומחית ליישום פתרונות בינה מלאכותית.</span>
+                </div>
+                <div class="flex gap-3">
+                    <span class="text-sky-300 font-bold">•</span>
+                    <span>ניסיון פיקודי והובלת צוותים בצה״ל, בדרגת סרן.</span>
+                </div>
+                <div class="flex gap-3">
+                    <span class="text-sky-300 font-bold">•</span>
+                    <span>מעל עשור של ניסיון בניתוח ושיפור תהליכים, דאטה ו BI.</span>
+                </div>
+                <div class="flex gap-3">
+                    <span class="text-sky-300 font-bold">•</span>
+                    <span>גישה פרקטית שמתרגמת AI לכלים יומיומיים.</span>
+                </div>
+            </div>
+        </section>
+
+        <div class="soft-divider mb-6"></div>
+
+        <section class="text-center">
+            <a href="https://wa.me/972543675502?text=%D7%94%D7%99%D7%99%20%D7%9E%D7%A2%D7%99%D7%99%D7%9F%2C%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%A4%D7%A8%D7%98%D7%99%D7%9D%20%D7%95%D7%94%D7%AA%D7%90%D7%9E%D7%94" target="_blank" rel="noopener"
+               class="btn-primary block w-full py-4 rounded-full font-bold text-lg shadow-lg">
+                לפרטים והתאמה
+            </a>
+
+            <p class="text-slate-300/55 text-xs mt-5 tracking-wide">
+                SMART AI · Maayan Shalom
+            </p>
+        </section>
+    </main>
+</body>
+</html>
