--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+```html
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
@@ -10,186 +10,274 @@
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <meta name="description" content="כלים, הדרכות והרצאות בבינה מלאכותית">
-
   <meta property="og:title" content="SMART AI | מעיין שלום">
   <meta property="og:description" content="כלים, הדרכות והרצאות בבינה מלאכותית">
   <meta property="og:image" content="https://maayan012.github.io/AI/preview.jpg">
   <meta property="og:url" content="https://maayan012.github.io/AI/">
 
   <style>
-    body {
-      font-family: 'Assistant', sans-serif;
-      background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
-      min-height: 100vh;
-      color: white;
+    body{
+      font-family:'Assistant',sans-serif;
+      min-height:100vh;
+      color:#fff;
+      background:
+        radial-gradient(ellipse at 50% 0%, rgba(125,60,220,0.38) 0%, transparent 52%),
+        radial-gradient(ellipse at 80% 18%, rgba(37,99,235,0.28) 0%, transparent 45%),
+        radial-gradient(ellipse at 20% 82%, rgba(56,189,248,0.18) 0%, transparent 45%),
+        linear-gradient(135deg,#070b18 0%, #0b1223 50%, #0f172a 100%);
     }
-    .glass-card {
-      background: rgba(255, 255, 255, 0.03);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 24px;
+
+    .glass-card{
+      background: rgba(17,24,39,0.62);
+      backdrop-filter: blur(18px);
+      border: 1px solid rgba(255,255,255,0.12);
+      border-radius: 28px;
+      box-shadow:
+        0 18px 70px rgba(0,0,0,0.42),
+        inset 0 1px 0 rgba(255,255,255,0.06);
     }
-    .profile-img {
-      border: 4px solid #38bdf8;
-      box-shadow: 0 0 20px rgba(56, 189, 248, 0.4);
+
+    .profile-ring{
+      display:inline-flex;
+      padding:3px;
+      border-radius:9999px;
+      background: linear-gradient(135deg, rgba(56,189,248,1) 0%, rgba(99,102,241,1) 50%, rgba(56,189,248,1) 100%);
+      box-shadow:
+        0 0 28px rgba(56,189,248,0.28),
+        0 0 60px rgba(56,189,248,0.12);
     }
-    .social-icon {
-      transition: all 0.3s ease;
-      fill: currentColor;
+
+    .profile-img{
+      width:128px;
+      height:128px;
+      border-radius:9999px;
+      object-fit:cover;
+      display:block;
+      background: rgba(255,255,255,0.06);
+      border: 3px solid rgba(15,23,42,0.9);
     }
-    .social-icon:hover {
-      transform: translateY(-3px);
-      color: #38bdf8;
+
+    .section-title{
+      position:relative;
+      display:inline-block;
+      margin-bottom: 1.2rem;
+      padding-right: 10px;
     }
-    .btn-primary {
-      background: linear-gradient(90deg, #0ea5e9 0%, #2563eb 100%);
-      transition: all 0.3s ease;
+    .section-title::before{
+      content:'';
+      position:absolute;
+      right:0;
+      top:50%;
+      transform:translateY(-50%);
+      width:6px;
+      height:6px;
+      border-radius:9999px;
+      background:#38bdf8;
+      box-shadow:0 0 18px rgba(56,189,248,0.55);
     }
-    .btn-primary:hover {
-      box-shadow: 0 4px 15px rgba(37, 99, 235, 0.4);
-      transform: scale(1.02);
+
+    .social-icon{
+      width:46px;
+      height:46px;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      border-radius:9999px;
+      color: rgba(226,232,240,0.7);
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(255,255,255,0.10);
+      transition: transform 0.2s ease, color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;
     }
-    .section-title {
-      position: relative;
-      display: inline-block;
-      margin-bottom: 1.5rem;
+    .social-icon:hover{
+      transform: translateY(-2px);
+      color:#38bdf8;
+      background: rgba(255,255,255,0.08);
+      box-shadow: 0 10px 22px rgba(56,189,248,0.14);
     }
-    .section-title::after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      right: 0;
-      width: 40px;
-      height: 2px;
-      background: #38bdf8;
+
+    .service-card{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      padding:16px 14px;
+      border-radius:18px;
+      border:1px solid rgba(255,255,255,0.12);
+      background: linear-gradient(135deg, rgba(255,255,255,0.06) 0%, rgba(255,255,255,0.03) 100%);
+      transition: transform 0.22s ease, box-shadow 0.22s ease, background 0.22s ease, border-color 0.22s ease;
+      text-decoration:none;
+      color:#fff;
+    }
+    .service-card:hover{
+      transform: translateY(-2px);
+      border-color: rgba(56,189,248,0.28);
+      background: linear-gradient(135deg, rgba(255,255,255,0.10) 0%, rgba(255,255,255,0.05) 100%);
+      box-shadow: 0 14px 34px rgba(56,189,248,0.14);
+    }
+
+    .btn-primary{
+      display:block;
+      width:100%;
+      padding:18px 18px;
+      border-radius:9999px;
+      font-weight:700;
+      font-size:1.125rem;
+      color:#fff;
+      text-align:center;
+      text-decoration:none;
+      background: linear-gradient(135deg, rgba(56,189,248,1) 0%, rgba(37,99,235,1) 50%, rgba(99,102,241,1) 100%);
+      background-size: 180% 180%;
+      transition: transform 0.22s ease, box-shadow 0.22s ease, filter 0.22s ease;
+      box-shadow: 0 10px 30px rgba(56,189,248,0.22), inset 0 1px 0 rgba(255,255,255,0.18);
+    }
+    .btn-primary:hover{
+      transform: translateY(-2px);
+      box-shadow: 0 16px 44px rgba(56,189,248,0.28), inset 0 1px 0 rgba(255,255,255,0.18);
+      filter: brightness(1.03);
+    }
+
+    @media (prefers-reduced-motion: no-preference){
+      .btn-primary{
+        animation: gradient_shift 8s ease-in-out infinite;
+      }
+      .btn-primary:hover{
+        animation-duration: 6s;
+      }
+    }
+    @keyframes gradient_shift{
+      0%,100%{ background-position: 0% 50%; }
+      50%{ background-position: 100% 50%; }
+    }
+
+    .muted{
+      color: rgba(226,232,240,0.72);
+    }
+
+    .soft{
+      color: rgba(226,232,240,0.55);
     }
   </style>
 </head>
 
 <body class="p-4 md:p-8 flex justify-center">
-
-  <div class="max-w-md w-full glass-card p-6 md:p-8 shadow-2xl">
+  <div class="max-w-md w-full glass-card p-6 md:p-8">
 
     <div class="text-center mb-8">
-      <div class="relative inline-block mb-4">
-        <img
-          src="https://github.com/maayan012/Maayan-picture/blob/main/Gemini_Generated_Image_ddfux6ddfux6ddfu.png?raw=true"
-          alt="מעיין שלום"
-          class="profile-img w-32 h-32 rounded-full object-cover mx-auto"
-          onerror="this.src='https://ui-avatars.com/api/?name=Maayan+Shalom&background=0ea5e9&color=fff&size=128'">
+      <div class="mb-4">
+        <span class="profile-ring">
+          <img
+            src="https://github.com/maayan012/Maayan-picture/blob/main/Gemini_Generated_Image_ddfux6ddfux6ddfu.png?raw=true"
+            alt="מעיין שלום"
+            class="profile-img">
+        </span>
       </div>
 
-      <h1 class="text-3xl font-bold mb-2">מעיין שלום</h1>
-      <h2 class="text-sky-400 font-semibold text-lg mb-4">Maayan Shalom</h2>
+      <h1 class="text-3xl font-bold mb-1">מעיין שלום</h1>
+      <h2 class="text-sky-300 font-semibold text-base mb-3">Maayan Shalom</h2>
 
-      <p class="text-gray-300 leading-relaxed text-sm">
+      <p class="muted text-sm leading-relaxed">
         מהנדסת, מתמחה בשיפור תהליכים, דאטה ו AI
-        <br />
+        <br>
         הרצאות והדרכות על בינה מלאכותית
       </p>
     </div>
 
-    <div class="flex justify-center gap-5 mb-8">
-
-      <a href="https://wa.me/972543675502" target="_blank" class="social-icon text-gray-400" aria-label="WhatsApp">
-        <svg class="w-7 h-7" viewBox="0 0 32 32">
+    <div class="flex justify-center gap-4 mb-8">
+      <a href="https://wa.me/972543675502" target="_blank" class="social-icon" aria-label="WhatsApp">
+        <svg class="w-6 h-6" viewBox="0 0 32 32" fill="currentColor">
           <path d="M16 0C7.163 0 0 7.163 0 16c0 2.837.742 5.502 2.038 7.821L0 32l8.426-2.012A15.9 15.9 0 0 0 16 32c8.837 0 16-7.163 16-16S24.837 0 16 0zm0 29.09a13.02 13.02 0 0 1-6.64-1.82l-.474-.28-4.996 1.193 1.335-4.873-.309-.5A13.03 13.03 0 1 1 16 29.09zm7.538-9.644c-.412-.206-2.437-1.203-2.815-1.342-.378-.137-.653-.206-.928.206-.275.413-1.065 1.342-1.305 1.618-.24.275-.481.309-.893.103-.412-.206-1.739-.64-3.31-2.04-1.222-1.09-2.047-2.437-2.286-2.849-.24-.413-.025-.636.181-.842.185-.184.412-.481.618-.721.206-.24.275-.413.412-.688.137-.275.069-.515-.034-.721-.103-.206-.928-2.232-1.27-3.058-.333-.8-.672-.69-.928-.703-.24-.012-.515-.015-.79-.015s-.721.103-1.1.515c-.378.413-1.444 1.412-1.444 3.446 0 2.034 1.48 4.001 1.687 4.277.206.275 2.916 4.453 7.07 6.247.988.426 1.76.681 2.36.872.991.315 1.893.27 2.605.164.795-.118 2.437-.996 2.783-1.96.344-.964.344-1.79.24-1.96-.103-.172-.378-.275-.79-.481z"/>
         </svg>
       </a>
 
-      <a href="mailto:smartai.maayan@gmail.com" class="social-icon text-gray-400" aria-label="Email">
-        <svg class="w-7 h-7" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+      <a href="mailto:smartai.maayan@gmail.com" class="social-icon" aria-label="Email">
+        <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
           <polyline points="22,6 12,13 2,6"/>
         </svg>
       </a>
 
-      <a href="https://www.linkedin.com/in/maayan-shalom012" target="_blank" class="social-icon text-gray-400" aria-label="LinkedIn">
-        <svg class="w-7 h-7" viewBox="0 0 24 24">
+      <a href="https://www.linkedin.com/in/maayan-shalom012" target="_blank" class="social-icon" aria-label="LinkedIn">
+        <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
           <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
         </svg>
       </a>
 
-      <a href="https://www.instagram.com/maayan.shalom.ai" target="_blank" class="social-icon text-gray-400" aria-label="Instagram">
-        <svg class="w-7 h-7" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <a href="https://www.instagram.com/maayan.shalom.ai" target="_blank" class="social-icon" aria-label="Instagram">
+        <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
           <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
           <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
         </svg>
       </a>
 
-      <a href="https://www.facebook.com/profile.php?id=61576235122754" target="_blank" class="social-icon text-gray-400" aria-label="Facebook">
-        <svg class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor">
+      <a href="https://www.facebook.com/profile.php?id=61576235122754" target="_blank" class="social-icon" aria-label="Facebook">
+        <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
           <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/>
         </svg>
       </a>
-
     </div>
 
     <div class="mb-8">
       <h3 class="section-title text-xl font-bold">קורסים והרצאות</h3>
 
       <div class="grid grid-cols-1 gap-3">
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">✨</span>
-          <span>הרצאות השראה</span>
-        </div>
+        <a class="service-card" href="https://wa.me/972543675502" target="_blank" rel="noopener">
+          <span class="w-8 text-center text-sky-300 text-lg">✨</span>
+          <span class="font-semibold">הרצאות השראה</span>
+        </a>
 
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">🏢</span>
-          <span>סדנאות והרצאות לארגונים</span>
-        </div>
+        <a class="service-card" href="https://wa.me/972543675502" target="_blank" rel="noopener">
+          <span class="w-8 text-center text-sky-300 text-lg">🏢</span>
+          <span class="font-semibold">סדנאות והרצאות לארגונים</span>
+        </a>
 
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">🎓</span>
-          <span>סדנאות והרצאות לאנשי חינוך</span>
-        </div>
+        <a class="service-card" href="https://wa.me/972543675502" target="_blank" rel="noopener">
+          <span class="w-8 text-center text-sky-300 text-lg">🎓</span>
+          <span class="font-semibold">סדנאות והרצאות לאנשי חינוך</span>
+        </a>
 
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">🚀</span>
-          <span>קורס AI MASTERY</span>
-        </div>
+        <a class="service-card" href="https://wa.me/972543675502" target="_blank" rel="noopener">
+          <span class="w-8 text-center text-sky-300 text-lg">🚀</span>
+          <span class="font-semibold">קורס AI MASTERY</span>
+        </a>
 
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">🧪</span>
-          <span>מעבדות דמיון</span>
-        </div>
+        <a class="service-card" href="https://wa.me/972543675502" target="_blank" rel="noopener">
+          <span class="w-8 text-center text-sky-300 text-lg">🧪</span>
+          <span class="font-semibold">מעבדות דמיון</span>
+        </a>
       </div>
     </div>
 
     <div class="mb-8">
       <h3 class="section-title text-xl font-bold">קצת עלי</h3>
 
-      <ul class="space-y-3 text-sm text-gray-300">
+      <ul class="space-y-3 text-sm muted">
         <li class="flex gap-2">
-          <span class="text-sky-400 font-bold">•</span>
+          <span class="text-sky-300 font-bold">•</span>
           <span>מהנדסת תעשייה וניהול (B.Sc, טכניון) מומחית ליישום פתרונות בינה מלאכותית.</span>
         </li>
         <li class="flex gap-2">
-          <span class="text-sky-400 font-bold">•</span>
+          <span class="text-sky-300 font-bold">•</span>
           <span>ניסיון פיקודי והובלת צוותים בצה״ל, בדרגת סרן.</span>
         </li>
         <li class="flex gap-2">
-          <span class="text-sky-400 font-bold">•</span>
+          <span class="text-sky-300 font-bold">•</span>
           <span>מעל עשור של ניסיון בניתוח ושיפור תהליכים, דאטה ו BI.</span>
         </li>
         <li class="flex gap-2">
-          <span class="text-sky-400 font-bold">•</span>
+          <span class="text-sky-300 font-bold">•</span>
           <span>גישה פרקטית המנגישה את עולם ה AI בצורה אפקטיבית ושימושית.</span>
         </li>
       </ul>
     </div>
 
     <div class="mt-8 text-center">
-      <a href="https://wa.me/972543675502" class="btn-primary block w-full py-4 rounded-full font-bold text-lg shadow-lg">
+      <a href="https://wa.me/972543675502" class="btn-primary" target="_blank" rel="noopener">
         לפרטים והתאמה
       </a>
-      <p class="text-gray-500 text-xs mt-6 opacity-60 uppercase tracking-widest">SMART AI | Maayan Shalom</p>
+      <p class="soft text-xs mt-6 opacity-80 tracking-widest">SMART AI | Maayan Shalom</p>
     </div>
 
   </div>
-
 </body>
 </html>
-
-
+```
